css hover flicker issue fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -91,7 +91,6 @@ body {
     background: var(--app-theme-bg-color);
     color: var(--app-theme-color);
     opacity: 0.9 !important;
-    border: inherit !important;
   }
 
   &.dark {
